# EnsembleAPI

./: .gitignore  .gitmodules  CMakeLists.txt  EnsembleAPI.cpp  EnsembleAPI.h  README.md  makefile
module/: CMakeLists.txt
src/: CMakeLists.txt  EnsembleAPI.cpp  EnsembleAPI.h  Function.h  Interface.cpp  Interface.h  InterfaceControl.cpp  InterfaceControl.h
src/interface/: InterfaceControl.cpp  InterfaceControl.h
